ADDED DELIVERABLES FAM

--- a/groupdeliverable1.html
+++ b/groupdeliverable1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Research Plan</title>
+  <title>Personas</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <link rel="icon" href="./images/LogoTijn.png">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -28,84 +28,17 @@
   <div class="placeholder"></div>
   <main class="product-main">
     <section id="welcome" class="product-intro">
-      <h1 class="product-heading">USER RESEARCH PLAN</h1>
-      <p class="product-text">REPORT CONTAINING THE RESEARCH PLAN WHICH HAS BEEN CONDUCTED WITH USERS.</p>
+      <h2 class="project-heading">GROUP PROJECT</h2>
+      <h1 class="product-heading">PERSONAS</h1>
+      <p class="product-text">DELIVERABLE CONTAINING PERSONAS FOR GROUP PROJECT</p>
     </section>
-  <div class="width">
-      <h2 class="guide">INTRO</h2>
-          <p class="desc">
-              This deliverable page presents a summary of the user research plan which has been conducted with users of the portfolio. The page gives a summary of the process which has been taken, from setting up goals to execution. It is suggested to read through this summary first for a better understanding, after which to use the button at the bottom of the page to refer to as the actual proof document.
-          </p>
-      <hr class="version">
-  </div>
-  <div class="reveal">
-      <div class="width">
-          <h2 class="guide">GOALS</h2>
-          <p class="desc">
-            To clarify what I intend to achieve with this research plan, I set up my goals as SMART as possible:
-          </p>
-          <ul class="target-list">
-            <li>Ik wil begrijpen welke stappen een gebruiker doorloopt om een bepaalde taak in het portfolio te voltooien m.b.v. diverse onderzoeksmethodes, waar ik tijdens de uitvoering achter ga komen in een tijdsspan van ca. één uur. </li>
-            <li>Ik wil ontdekken wat de beredenering van de feedback van een gebruiker is, dus waarom de gebruiker vindt wat hij/zij vindt, a.d.h.v. het toepassen van diverse onderzoeksmethodes en tools, tijdens het interview met de gebruiker.</li>
-            <li>Ik ga pijn- en verbeterpunten opstellen a.d.h.v. de resultaten die ik van gebruikers heb gekregen tijdens het interview met diverse tools, om erachter te komen wat er echt anders moet in mijn portfolio, wat na het uitvoeren van het onderzoeksplan gebeurt.</li>
-          </ul>
-          <hr class="version">
-      </div>
-  </div>
-  <div class="reveal">
     <div class="width">
-        <h2 class="guide">TARGET GROUP</h2>
+        <h2 class="guide">PERSONAS</h2>
         <p class="desc">
-          The target group for this project are mainly teachers/assessors. Since the portfolio acts as the big piece of evidence of what I have done this semester, assessors need to be able to access my work easily with this portfolio.
-          This is of course the intended target group, but the target group has been confirmed with the help of the execution of this research plan. Several persona's have been set up to clarify who the end user of this portfolio will be:
+          I used Figma for my entire designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
         </p>
         <hr class="version">
     </div>
-  </div>
-  <div class="reveal">
-    <div class="width">
-        <h2 class="guide">METHODOLOGY</h2>
-        <p class="desc">
-          After knowing who I would need to gather insights, I had to create a plan of approach for the methodology. I often use <a class="menu-link line" href="https://www.nngroup.com/articles/which-ux-research-methods/" target="_blank" rel="noopener noreferrer">Nielsen Norman Group</a> to pick suitable research methods. This is mainly because they offer thorough explanation on executing these research methods.
-          Since I knew what my goals were, I quickly got to some suitable research methods. The portfolio is relatively small, so two to three methods would suffice to gain insights on all aspects of the portfolio. The research methods are conducted one on one with the user:
-        </p>
-        <ul class="target-list">
-          <li>Short user interview (to clarify the target group)</li>
-          <li>Contextual inquiry</li>
-          <li>Task-based usability test</li>
-        </ul>
-        <hr class="version">
-    </div>
-  </div>
-  <div class="reveal">
-    <div class="width">
-        <h2 class="guide">NOTABLE RESULTS</h2>
-        <div class="column">
-          <p class="company">
-            After conducting this research plan, several results came forward. In general, the structure of the portfolio is clear and easy to navigate through. However, some visual elements were mentioned several times, such as the text being too big, or unnecessary elements grabbing the attention.
-          </p>
-          <p class="company">
-            The information the users receive on screens are fine. The solutions to these pain points are several design changes, which means that there is nothing major that needs to be changed. This was something that I had expected, which can be seen in the hypotheses of the goals inside the document.
-          </p>
-        </div>
-        <hr class="version">
-    </div>
-  </div>
-  <div class="reveal">
-    <div class="width">
-      <h2 class="guide">NEXT STEPS</h2>
-      <p class="desc">
-        After conducting my research plan with several users, I analyzed the gathered results, which helped me to iterate on my <a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">designs</a>. These were mainly small design choice changes, but when I started developing I was still having update meetings. During these meetings, I received advice on how to achieve the final goal I was aiming for.
-      </p>
-      <p class="desc">
-        The validated design for my portfolio will then be used for the start of the development. By having created the designated style and structure in these wireframes and mockups, the start of the development process is straightforward.
-      </p>
-    </div>
-    <hr class="version">
-  </div>
-  <div class="company-btn">
-    <a onclick="window.open('https://drive.google.com/file/d/1QjnaEBBA_qTlO8SRhcUBT_4okBGEDblW/view?usp=sharing')" class="explore-btn">User Research Plan Document</a>
-  </div>
   </main>
   
 
