--- a/groupdeliverable6.html
+++ b/groupdeliverable6.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project Plan</title>
+  <title>The Scrum Master</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <link rel="icon" href="./images/LogoTijn.png">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -28,19 +28,17 @@
   <div class="placeholder"></div>
   <main class="product-main">
     <section id="welcome" class="product-intro">
-      <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
-      <h1 class="product-heading">PROJECT PLAN</h1>
-      <p class="product-text">REPORT CONTAINING THE RESEARCH PLAN WHICH HAS BEEN CONDUCTED WITH USERS.</p>
+      <h2 class="project-heading">GROUP PROJECT</h2>
+      <h1 class="product-heading">THE SCRUM MASTER</h1>
+      <p class="product-text">DELIVERABLE CONTAINING MY ROLE AS SCRUM MASTER</p>
     </section>
-  <div class="reveal">
-      <div class="width">
-          <h2 class="guide">INTRO</h2>
-              <p class="desc">
-                  This deliverable page presents a summary of the user research plan which has been conducted with users of the portfolio. The page gives a summary of the process which has been taken, from setting up goals to execution. It is suggested to read through this summary first for a better understanding, after which to use the button at the bottom of the page to refer to as the actual proof document.
-              </p>
-          <hr>
-      </div>
-  </div>
+    <div class="width">
+        <h2 class="guide">PERSONAS</h2>
+        <p class="desc">
+          I used Figma for my entire designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+        </p>
+        <hr class="version">
+    </div>
   </main>
   
 
