--- a/individualdeliverable2.html
+++ b/individualdeliverable2.html
@@ -28,18 +28,17 @@
   <div class="placeholder"></div>
   <main class="product-main">
     <section id="welcome" class="product-intro">
+      <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
       <h1 class="product-heading">WIREFRAMES AND MOCKUPS</h1>
       <p class="product-text">DOCUMENTING THE PROCESS OF ITERATIVELY WORKING ON THE DESIGN OF THE PORTFOLIO.</p>
     </section>
-  <div class="reveal">
-      <div class="width">
-          <h2 class="guide">INTRO</h2>
-          <p class="desc">
-              This deliverable page presents the documentation of the wireframing and designing process of the portfolio. After having answered several sub-questions, it was time to start structuring the portfolio. I started doing this by creating wireframes in a quick succession.
-          </p>
-        <hr class="version">
-      </div>
-  </div>
+    <div class="width">
+        <h2 class="guide">INTRO</h2>
+        <p class="desc">
+            This deliverable page presents the documentation of the wireframing and designing process of the portfolio. After having answered several sub-questions, it was time to start structuring the portfolio. I started doing this by creating wireframes in a quick succession.
+        </p>
+      <hr class="version">
+    </div>
   <div class="reveal">
     <div class="width">
       <div class="wireframe">
