--- a/individualdeliverable1.html
+++ b/individualdeliverable1.html
@@ -28,6 +28,7 @@
   <div class="placeholder"></div>
   <main class="product-main">
     <section id="welcome" class="product-intro">
+      <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
       <h1 class="product-heading">USER RESEARCH PLAN</h1>
       <p class="product-text">REPORT CONTAINING THE RESEARCH PLAN WHICH HAS BEEN CONDUCTED WITH USERS.</p>
     </section>
