--- a/individualdeliverable4.html
+++ b/individualdeliverable4.html
@@ -28,6 +28,7 @@
   <div class="placeholder"></div>
   <main class="product-main">
     <section id="welcome" class="product-intro">
+      <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
       <h1 class="product-heading">FRONT-END FRAMEWORK RESEARCH</h1>
       <p class="product-text">REPORT CONTAINING THE RESEARCH THAT HAS BEEN DONE REGARDING FRONT-END FRAMEWORKS.</p>
     </section>
