--- a/individualdeliverable5.html
+++ b/individualdeliverable5.html
@@ -28,6 +28,7 @@
   <div class="placeholder"></div>
   <main class="product-main">
     <section id="welcome" class="product-intro">
+      <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
       <h1 class="product-heading">PERSONAL REFLECTION AND EVALUATION</h1>
       <p class="product-text">PERSONAL REFLECTION AND EVALUATUON ON THE INDIVIDUAL PROJECT.</p>
     </section>
