--- a/individualdeliverable6.html
+++ b/individualdeliverable6.html
@@ -28,21 +28,20 @@
   <div class="placeholder"></div>
   <main class="product-main">
     <section id="welcome" class="product-intro">
+      <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
       <h1 class="product-heading">METHODS AND TOOLING</h1>
       <p class="product-text">REPORT CONTAINING THE RESEARCH PLAN WHICH HAS BEEN CONDUCTED WITH USERS.</p>
     </section>
-  <div class="reveal">
-      <div class="width">
-          <h2 class="guide">FIGMA</h2>
-          <p class="desc">
-            I used Figma for my entired designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
-          </p>
-          <div class="company">
-            <img class="deliverable" src="./images/figma.png">
-          </div>
-          <hr class="version">
-      </div>
-  </div>
+    <div class="width">
+        <h2 class="guide">FIGMA</h2>
+        <p class="desc">
+          I used Figma for my entire designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+        </p>
+        <div class="company">
+          <img class="deliverable" src="./images/figma.png">
+        </div>
+        <hr class="version">
+    </div>
   <div class="reveal">
     <div class="width">
         <h2 class="guide">NOTION</h2>
