--- a/homepage.html
+++ b/homepage.html
@@ -169,9 +169,8 @@
                         <td>
                             <ul class="proof">
                                 <li><a class="menu-link line" href="individualdeliverable3.html" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Project Plan</a></li>
+                                <li><a class="menu-link line" href="groupdeliverable7.html" target="_blank" rel="noopener noreferrer">Group Project: Project Plan</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable6.html" target="_blank" rel="noopener noreferrer">Group Project: The SCRUM Master</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
                             </ul>
                         </td>
@@ -195,9 +194,9 @@
                                 <li><a class="menu-link line" href="individualdeliverable5.html" target="_blank" rel="noopener noreferrer">Individual Project: Personal Evaluation and Reflection</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable6.html" target="_blank" rel="noopener noreferrer">Individual Project: Methods and Tooling</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable6.html" target="_blank" rel="noopener noreferrer">Group Project: The SCRUM Master</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: (Personal) Evaluation and Reflection</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Methods and Tooling</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Update Presentation</a></li>
+                                <li><a class="menu-link line" href="groupdeliverable8.html" target="_blank" rel="noopener noreferrer">Group Project: (Personal) Evaluation and Reflection</a></li>
+                                <li><a class="menu-link line" href="groupdeliverable9.html" target="_blank" rel="noopener noreferrer">Group Project: Methods and Tooling</a></li>
+                                <li><a class="menu-link line" href="groupdeliverable10.html" target="_blank" rel="noopener noreferrer">Group Project: Update Presentation</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Working With Vue</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
@@ -209,8 +208,8 @@
                         <td>
                             <ul class="proof">
                                 <li><a class="menu-link line" href="individualdeliverable5.html" target="_blank" rel="noopener noreferrer">Individual Project: Personal Evaluation and Reflection</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: (Personal) Evaluation and Reflection</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Update Presentation</a></li>
+                                <li><a class="menu-link line" href="groupdeliverable8.html" target="_blank" rel="noopener noreferrer">Group Project: (Personal) Evaluation and Reflection</a></li>
+                                <li><a class="menu-link line" href="groupdeliverable10.html" target="_blank" rel="noopener noreferrer">Group Project: Update Presentation</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">International Project: Dutch Design Week</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">International Project: Malaga</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
