--- a/individualdeliverable2.html
+++ b/individualdeliverable2.html
@@ -41,9 +41,26 @@
     </div>
   <div class="reveal">
     <div class="width">
+      <h2 class="guide">WIREFRAMES</h2>
       <div class="wireframe">
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUJvSBrLB8Swfp0aRJS4jh0%2FPortfolio-Design%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DhBrazK1KSFYOijhg-1" allowfullscreen></iframe>      
       </div>
+      <p class="desc">
+          After gathering a solid idea on what the portfolio should contain by consulting the canvas course, and talking with lecturers, I was able to set up the list of requirements:
+          <ul class="target-list">
+            <li>The portfolio should contain a seperately delivered reading guide.</li>
+            <li>The portfolio should contain a clear flow of: reading guide -> deliverables -> documentation.
+            </li>
+            <li>The portfolio should indicate proficiency in all of the learning outcomes.
+            </li>
+            <li>The portfolio should contain all different projects that have been worked on during the semester.
+            </li>
+          </ul>
+      </p>
+      <p class="desc">
+        By setting up these requirements, I started ticking them off in my initial wireframes. The homepage would contain a link to all three projects for ease of accessibility. Within these projects, deliverables for that specific project are shown. On this page, the user would also be able to toggle between the projects in the top right.
+      </p>
+      <p class="desc">Before accessing a deliverable, there are tags referring to each deliverable indicating the learning outcome it is attached to. Within a deliverable, an overview of the proof is shown, and when necessary, external documents are linked at the bottom of the deliverable.</p>
       <p class="desc">
         These wireframes were very low fidelity, but after making use of <a class="menu-link line" href="https://ictresearchmethods.nl/showroom/peer-review/" target="_blank" rel="noopener noreferrer">peer review</a> I could validate that the structure of the portfolio was clear. This meant that I could quickly start with the actual design of the portfolio.
       </p>
@@ -52,11 +69,15 @@
   </div>
   <div class="reveal">
     <div class="width">
+      <h2 class="guide">MOCKUPS</h2>
       <p class="desc">
-        The start of the design phase was a bit rough. Making design choices such as colors, typefaces and spacing took longer than expected, which was not particularly a bad thing, but I wish I could have went through this in a more fluent succession. On the other hand, since it took longer for me to make certain choices, I dedicated more time to asking for feedback on certain aspects of the portfolio. This helped with creating a portfolio design I am sufficed with.
+        The start of the actual design was a bit rough. Making design choices such as colors, typefaces and spacing took longer than expected, which was not particularly a bad thing, but I wish I could have went through this in a more fluent succession. On the other hand, since it took longer for me to make certain choices, I dedicated more time to asking for feedback on certain aspects of the portfolio. This helped with creating a portfolio design I was sufficed with.
       </p>
       <p class="desc">
-        I also wanted my design to be in a sleek dark mode, since this is how I usually create my sites. Below you can see the design which has been created based on the earlier created wireframes.
+        I also wanted my design to be in a sleek dark mode. This is a decision I had made since this is how I usually create my sites. All projects would eventually have a clear illustration, indicating the project it refers to (the group project will have the grip on sound logo for example).
+      </p>
+      <p class="desc">
+        Below you can see the design which has been created based on the earlier created wireframes.
       </p>
       <div class="wireframe">
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUJvSBrLB8Swfp0aRJS4jh0%2FPortfolio-Design%3Ftype%3Ddesign%26node-id%3D13%253A2%26mode%3Ddesign%26t%3DhBrazK1KSFYOijhg-1" allowfullscreen></iframe>      </div>
@@ -65,9 +86,21 @@
   </div>
   <div class="reveal">
     <div class="width">
+      <h2 class="guide">PROTOTYPE & ITERATIONS</h2>
       <p class="desc">
-        After finishing my design, I turned my mockups into a functional prototype. This is the prototype I used to execute my <a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">user research plan</a>. After having executed this user research plan, I noticed that the overall structure is clear, but the portfolio was still missing some features. I decided to create a diagram of the final structure. This structure still has the same idea, but with added features, such as the competence table, and other additional projects.
+        After finishing my design, I turned my mockups into a functional prototype. This is the prototype I used to execute my <a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">user research plan</a>. This prototype had the main functionalities of the prototype working. This includes:
+        <ul class="target-list">
+          <li>A functional explore button which scrolls the user down.</li>
+          <li>An accessible backwards button at all times.</li>
+          <li>A selection of three projects for the user to choose between.</li>
+          <li>The ability to toggle between projects on a specific project page.</li>
+          <li>The ability to read through deliverables of a specific project.</li>
+        </ul>
       </p>
+      <p class="desc">
+        After having executed this user research plan, I noticed that the overall structure is clear, but the portfolio was still missing some features. I decided to create a diagram of the final structure. This structure still has the same idea, but with added features.
+      </p>
+      <p class="desc">These features consisted mainly of a main reading guide with a competence table on the homepage. This decision was made for the ease of access to solid proof. In this table the user is able to see all of the deliverables of the semester which are linked to a specific learning outcome. This meant that the deliverbales are accessible through the competence table on the homepage, and on the project pages.</p>
       <div class="wireframe">
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUJvSBrLB8Swfp0aRJS4jh0%2FPortfolio-Design%3Ftype%3Ddesign%26node-id%3D115%253A252%26mode%3Ddesign%26t%3DhBrazK1KSFYOijhg-1" allowfullscreen></iframe>    
       </div>
@@ -75,7 +108,8 @@
   </div>
   <div class="reveal">
     <div class="width">
-      <p class="desc">Adding these additional features, meant that these also needed to be worked out. Something I realized during update meetings, is that the competence table really acts as the core of the portfolio, where the proof is gathered. This meant that I took some time to work out the design of the competence table, which can be seen down below. </p>
+      <h2 class="guide">COMPETENCE TABLE</h2>
+      <p class="desc">Adding these additional features, meant that these also needed to be worked out. Something I realized during update meetings, is that the competence table really acts as the core of the portfolio, where the proof is gathered. This meant that I took some time to work out the design of the competence table. The choice of a simple table was easily made, since this is the part where all learning outcomes are listed, with their connected proof, which can be seen down below. </p>
       <div class="wireframe">
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUJvSBrLB8Swfp0aRJS4jh0%2FPortfolio-Design%3Ftype%3Ddesign%26node-id%3D117%253A2%26mode%3Ddesign%26t%3DhBrazK1KSFYOijhg-1" allowfullscreen></iframe>      <hr class="version">
     </div>
@@ -83,7 +117,11 @@
   <div class="reveal">
     <div class="width">
       <h2 class="guide">NEXT STEPS</h2>
-      <p class="desc">With my designs ready, I was ready to set up my <a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">user research plan</a>. This research plan will help me to iterate on my portfolio, and most importantly validate the design I had created. If any improvements are the results of this user research plan, I will iteratevily rework the portfolio.</p>
+      <p class="desc">With my designs ready, I was ready to set up my <a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">user research plan</a>. This research plan will help me to iterate on my portfolio, and most importantly validate the design I had created. If any improvements are the results of this user research plan, I will iteratevily rework the portfolio. This caused the list of action points for the following of the project:</p>
+      <ul class="target-list">
+        <li>Validate the created prototype with the user research plan.</li>
+        <li>Iterate on the portfolio if needed before jumping in development.</li>
+      </ul>
       <hr class="version">
     </div>
   </div>
