--- a/individualdeliverable3.html
+++ b/individualdeliverable3.html
@@ -30,7 +30,7 @@
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">INDIVIDUAL PROJECT</h2>
       <h1 class="product-heading">PROJECT PLAN</h1>
-      <p class="product-text">REPORT CONTAINING THE RESEARCH PLAN WHICH HAS BEEN CONDUCTED WITH USERS.</p>
+      <p class="product-text">DELIVERABLE CONTAINING THE INITIAL PROJECT PLAN AND ANSWERED RESEARCH QUESTIONS.</p>
     </section>
   <div class="reveal">
       <div class="width">
