tegenwoordige tijd in next steps

--- a/individualdeliverable2.html
+++ b/individualdeliverable2.html
@@ -117,7 +117,7 @@
   <div class="reveal">
     <div class="width">
       <h2 class="guide">NEXT STEPS</h2>
-      <p class="desc">With my designs ready, I was ready to set up my <a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">user research plan</a>. This research plan will help me to iterate on my portfolio, and most importantly validate the design I had created. If any improvements are the results of this user research plan, I will iteratevily rework the portfolio. This caused the list of action points for the following of the project:</p>
+      <p class="desc">With my designs ready, I am ready to set up my <a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">user research plan</a>. This research plan will help me to iterate on my portfolio, and most importantly validate the design I have created. If any improvements are the results of this user research plan, I will iteratevily rework the portfolio. This caused the list of action points for the following of the project:</p>
       <ul class="target-list">
         <li>Validate the created prototype with the user research plan.</li>
         <li>Iterate on the portfolio if needed before jumping in development.</li>
