--- a/individualdeliverable1.html
+++ b/individualdeliverable1.html
@@ -96,10 +96,15 @@
     <div class="width">
       <h2 class="guide">NEXT STEPS</h2>
       <p class="desc">
-        After conducting my research plan with several users, I analyzed the gathered results, which helped me to iterate on my <a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">designs</a>. These were mainly small design choice changes, but when I started developing I was still having update meetings. During these meetings, I received advice on how to achieve the final goal I was aiming for.
+        After conducting my research plan with several users, I analyzed the gathered results. These results will help me to iterate on my <a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">designs</a>. These are mainly small design choice changes, but when I will start developing I will still have update meetings. During these meetings, I aim to receive advice on how to achieve the final goal I am aiming for.
       </p>
       <p class="desc">
-        The validated design for my portfolio will then be used for the start of the development. By having created the designated style and structure in these wireframes and mockups, the start of the development process is straightforward.
+        The validated design for my portfolio will then be used for the start of the development. By having created the designated style and structure in these wireframes and mockups, the start of the development process is straightforward. The result of this deliverable caused for the following action list:
+        <ul class="target-list">
+          <li>Create iterations on the design based on the results of the user research plan.</li>
+          <li>Start with development of portfolio with the help of previously created portfolio.</li>
+          <li>Keep asking for feedback on additional features when necessary.</li>
+        </ul>
       </p>
     </div>
     <hr class="version">
