--- a/individualdeliverable4.html
+++ b/individualdeliverable4.html
@@ -96,7 +96,11 @@
       <div class="reveal">
         <div class="width">
           <h2 class="guide">NEXT STEPS</h2>
-          <p class="desc">With the results gathered from this front-end framework research, I can apply my insights into other fields of the semester. I have learned about the use of different frameworks, and their advantages and disadvantages. In <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Working With Vue</a> I made use of the suggested front-end framework.</p>
+          <p class="desc">With the results gathered from this front-end framework research, I can apply my insights into other fields of the semester. I have learned about the use of different frameworks, and their advantages and disadvantages. In <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Working With Vue</a> I will make use of the suggested front-end framework. The result of this deliverable caused for the following action list:
+          <ul class="target-list">
+            <li>Start development on the portfolio from scratch.</li>
+            <li>Apply the gained knowledge on frameworks in personal project.</li>
+          </ul></p>
           <hr class="version">
         </div>
       </div>
