--- a/homepage.html
+++ b/homepage.html
@@ -29,9 +29,14 @@
             <div class="welcome-text">
                 <h1 class="first-heading">TIJN V/D HEIJDEN</h1>
                 <h2 class="subheading">Take the lead, <a class="blue-text">and own your future!</a></h2>
-                <a href="#leeswijzer">
-                    <button class="explore">EXPLORE</button>
-                </a>
+                <div class="buttons">
+                    <a class="test" href="#leeswijzer">
+                        <button class="explore">EXPLORE</button>
+                    </a>
+                    <a class="test" href="#projects">
+                        <button class="explore">VIEW PROJECTS</button>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
