--- a/international.html
+++ b/international.html
@@ -26,8 +26,8 @@
     </div>
     <div class="navbar-links">
       <ul id="navbuttons" class="nav-menu">
+        <li class="nav-link" id="menu-item"><a class="menu-link line nav" href="individual.html">INDIVIDUAL</a></li>
         <li class="nav-link" id="menu-item"><a class="menu-link line nav" href="group.html">GROUP</a></li>
-        <li class="nav-link" id="menu-item"><a class="menu-link line nav" href="international.html">INTERNATIONAL</a></li>
         <li class="nav-link" id="menu-item"><a class="menu-link line nav" href="personal.html">PERSONAL</a></li>
       </ul>
     </div>
@@ -35,7 +35,7 @@
   <div class="placeholder"></div>
   <main class="product-main">
     <section id="welcome" class="product-intro">
-      <h1 class="product-heading">INDIVIDUAL PROJECT</h1>
+      <h1 class="product-heading">INTERNATIONAL PROJECT</h1>
       <p class="product-text">Page containing all content related to the individual project, which has been carried out during the first three weeks of the semester.</p>
     </section>
   </main>
